crates/formatter/tests/snapshots/snapshots__migrations__000268_add_audit_action_request_password_reset.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type audit_action add value if not exists 'request_password_reset';
