crates/formatter/tests/snapshots/snapshots__migrations__000271_cryptokey_features.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Create a new enum type with the desired values
create type new_crypto_key_feature as enum (
	'workspace_apps_token',
	'workspace_apps_api_key',
	'oidc_convert',
	'tailnet_resume'
);

delete from crypto_keys where feature = 'workspace_apps';

-- Drop the old type and rename the new one
alter table crypto_keys alter column feature type new_crypto_key_feature using (
	feature::text::new_crypto_key_feature
);

drop type crypto_key_feature;

alter type new_crypto_key_feature rename to crypto_key_feature;
